# amo_1c_sync

./: .gitignore  Dockerfile  access_token.txt  amo_hooks_data.json  amo_logs.json  docker-compose.yml  mypy.ini  pyproject.toml
app/: .env  amo_handler.py  cache_providers.py  interactions.py  main.py  models.py  settings.py  statuses.py  tasks.py  test_main.py  tokens.py
app/v2/: __init__.py  interaction.py
app/v2/entity/: pipeline.py
loki/: promtail-config.yaml
loki/grafana/provisioning/datasources/: loki.yml
service/traefik/: acme.json  traefik.dev.yml
services/traefik/: acme.json  traefik.dev.toml  traefik.dev.yml
src/: _1c.py  amo.py  asgi.py  entity.py  logs.py  qsdecoder.py  rabbit.py  redis_client.py  sauna_list.yml  settings.py  statuses.py  tasks.py  worker.py
