[tool.poetry]
name = "amo_1c_sync"
version = "0.1.0"
description = ""
authors = ["Michael <mpgg2000@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
amocrm-api-wrapper = "^0.0.17"
dramatiq = {extras = ["rabbitmq", "watch"], version = "^1.13.0"}
amocrm-api-client = {git = "https://github.com/iqtek/amocrm_api_client.git", rev = "v2.0.8"}
gunicorn = "^20.1.0"
pytest = "^7.1.3"
httpx = "^0.23.0"
python-json-logger = "^2.0.4"
logzero = "^1.7.0"
querystring-parser = "^1.2.4"
python-dotenv = "^0.21.0"
amocrm-api = "^2.5.0"
redis = "^4.3.4"
ujson = "^5.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
